Fixed some homepage scaling issues, added toggleable ingredients list to recipe page on mobile

--- a/public/css/hero.css
+++ b/public/css/hero.css
@@ -1,4 +1,5 @@
 .hero {
+    height: 100vh;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -12,8 +13,8 @@
 }
 
 .donut {
-    height: 30rem;
     width: 30rem;
+    height: auto;
     filter: drop-shadow(10px 10px 30px rgba(0,0,0,0.6));
     margin-bottom: 1rem;
 }
@@ -28,7 +29,7 @@
 .hero-title {
     font-size: 64px;
     font-weight: bold;
-    margin: 10px 4.5rem;
+    margin: 10px 2rem;
 }
 
 .hero-subtitle {
@@ -48,23 +49,28 @@
 
 @media (max-width: 1080px) {
     .donut {
-        width: 25rem;
-        height: 25rem;
+        width: clamp(20rem, 50%, 26rem);
+        height: auto;
     }
+
+    .hero-title {
+        font-size: clamp(44px, 6vw, 50px);
+    }
+
 }
 
 @media (max-width: 720px) {
     .donut {
-        width: 18rem;
-        height: 18rem;
+        width: clamp(14rem, 55%, 20rem);
+        height: auto;
     }
 
     .hero-title {
-        font-size: 48px;
+        font-size: clamp(30px, 6vw, 44px);
     }
 
     .hero-subtitle {
         margin-bottom: 2rem;
-        font-size: 20px;
+        font-size: clamp(12px, 4vw, 20px);
     }
 }
