--- a/public/css/recipe-list.css
+++ b/public/css/recipe-list.css
@@ -82,11 +82,41 @@
     margin-left: 2rem;
 }
 
+#ingredient-list-container-mobile {
+    display: none;
+    background-color: rgba(182, 234, 250, 1);
+    border-radius: 10px;
+    text-align: center;
+    border: none;
+    overflow: hidden;
+    height: 2rem;
+    width: 10rem;
+    max-height: 100%;
+    min-width: 10rem;
+    margin-bottom: 2rem;
+    padding: 0.5rem;
+}
+
+.ingredient-list-btn {
+    border: none;
+    background-color: transparent;
+    width: 100%;
+    height: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#open-arrow {
+    
+}
+
 .ingredient-list {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
+
 
 .ingredient-list-title {
     font-size: 20px;
@@ -94,10 +124,6 @@
     font-style: bold;
     margin: 0 0 0.5rem 0;
     padding: 0;
-}
-
-.ingredient-list {
-    list-style-type: none;
 }
 
 .ingredient {
@@ -109,7 +135,6 @@
 .hidden {
     display: none;
 }
-
 
 .measurement-toggle {
     cursor: pointer;
@@ -171,4 +196,20 @@
 .next-recipe-btn-list:hover {
     transition: 0.5s;
     background-color: white;
+}
+
+
+@media (max-width: 540px) {
+    .ingredient-list-container {
+        display: none;
+    }
+
+    #ingredient-list-container-mobile {
+        display: inline-block;
+    }
+
+    .list-text {
+        flex-direction: column;
+        align-items: center;
+    }
 }
