--- a/public/css/recipe-story.css
+++ b/public/css/recipe-story.css
@@ -58,7 +58,7 @@
     font-family: "Crimson Text", serif;
     color: #442727;
     text-align: left;
-    margin: 0 5.5rem;
+    margin: 0 2rem;
     max-width: 1080px;
 }
 .story-title {
